--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,10 @@
 	font-family: 'Mono RGO Pro';
 	src: url('../fonts/MonoRGOPro-Bold.eot');
 	src: url('../fonts/MonoRGOPro-Bold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/MonoRGOPro-Bold.woff2') format('woff2'),
-		url('../fonts/MonoRGOPro-Bold.woff') format('woff'),
-		url('../fonts/MonoRGOPro-Bold.ttf') format('truetype'),
-		url('../fonts/MonoRGOPro-Bold.svg#MonoRGOPro-Bold') format('svg');
+	url('../fonts/MonoRGOPro-Bold.woff2') format('woff2'),
+	url('../fonts/MonoRGOPro-Bold.woff') format('woff'),
+	url('../fonts/MonoRGOPro-Bold.ttf') format('truetype'),
+	url('../fonts/MonoRGOPro-Bold.svg#MonoRGOPro-Bold') format('svg');
 	font-weight: bold;
 	font-style: normal;
 }
@@ -16,18 +16,18 @@
 	font-family: 'Mono RGO Pro';
 	src: url('../fonts/MonoRGOPro-Regular.eot');
 	src: url('../fonts/MonoRGOPro-Regular.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/MonoRGOPro-Regular.woff2') format('woff2'),
-		url('../fonts/MonoRGOPro-Regular.woff') format('woff'),
-		url('../fonts/MonoRGOPro-Regular.ttf') format('truetype'),
-		url('../fonts/MonoRGOPro-Regular.svg#MonoRGOPro-Regular') format('svg');
+	url('../fonts/MonoRGOPro-Regular.woff2') format('woff2'),
+	url('../fonts/MonoRGOPro-Regular.woff') format('woff'),
+	url('../fonts/MonoRGOPro-Regular.ttf') format('truetype'),
+	url('../fonts/MonoRGOPro-Regular.svg#MonoRGOPro-Regular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 html,
 body {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 body{
@@ -50,20 +50,89 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: sans-serif;
+	font-family: sans-serif;
 }
 
 .header {
-    position: relative;
-    width: 100%;
-    min-height: 100%;
-    color: #fff;
+	position: relative;
+	width: 100%;
+	min-height: 100%;
+	color: #fff;
+}
+
+.header-content{
 	display: table;
+	width: 100%;
+	height: 100%;
+}
+
+.header .window{
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	top: 3%;
+	bottom: 0;
+	position: absolute;
+}
+
+.window{
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+	border: 4px solid #3b3c38;
+	width: 95%;
+	height: 95%;
+}
+
+.window-bar{
+	padding: 7px 10px;
+	border-bottom: 4px solid #3b3c38;
+}
+
+.window-bar-buttons{
+	display: block;
+	float: left;
+	width: 20px;
+	height: 20px;
+	border: 3px solid #3b3c38;
+	-webkit-border-radius: 200px;
+	-moz-border-radius: 200px;
+	border-radius: 200px;
+	position: relative;
+}
+
+.window-bar-buttons:before, .window-bar-buttons:after{
+	content: "";
+	display: block;
+	position: absolute;
+	left: 20px;
+	top: -3px;
+	width: 20px;
+	height: 20px;
+	border: 3px solid #3b3c38;
+	-webkit-border-radius: 200px;
+	-moz-border-radius: 200px;
+	border-radius: 200px;
+}
+
+.window-bar-buttons:after{
+	left: 43px;
+}
+
+.window-bar-input{
+	border: 3px solid #3b3c38;
+	width: 90%;
+	height: 20px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	float: right;
+	display: inline-block;
 }
 
 .hero{
-    display: table-cell;
-    vertical-align: middle;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .hero-content{
@@ -80,11 +149,11 @@ h6,
 	display: inline-block;
 	padding: 2px 6px;
 	-ms-transform: rotate(-90deg); /* IE 9 */
-    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
-    transform: rotate(-90deg);
-    position: absolute;
-    left: -73px;
-    top: 30px;
+	-webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+	transform: rotate(-90deg);
+	position: absolute;
+	left: -73px;
+	top: 30px;
 
 }
 
@@ -123,11 +192,29 @@ h6,
 }
 
 @media (max-width: 767px){
-	
+	.header .window-bar-input{
+		display: none;
+	}
+	.hero .coming{
+		transform: none;
+		position: inherit;
+		margin-bottom: -3px;
+		left: 0;
+		top: 0;
+	}
 }
 
 @media (max-width: 475px){
-	
+	.hero-content {
+		margin: -43px auto 0;
+	}
+	.hero .title {
+		font-size: 48px;
+		line-height: 45px;
+	}
+	.hero-content{
+		max-width: 265px;
+	}
 }
 
 @media only screen 
