--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,11 @@ h6,
 	font-family: sans-serif;
 }
 
+a, a:focus, a:hover{
+	outline: none;
+	text-decoration: none;
+}
+
 .header {
 	position: relative;
 	width: 100%;
@@ -358,50 +363,47 @@ h6,
 	margin-top: 48px;
 }
 .btn-call4 {
+	text-decoration: none;
 	border: 0;
-  background: #2196f3;
-  border-radius: 4px;
-  box-shadow: 0 5px 0 #1565c0;
-  color: #fff;
-  cursor: pointer;
-  font-size: 16px;
-  margin: 0;
-  outline: 0;
-  padding: 12px 22px;
-  transition: all .1s linear;
+	background: #2196f3;
+	border-radius: 4px;
+	box-shadow: 0 5px 0 #1565c0;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	margin: 0;
+	display: inline-block;
+	padding: 12px 22px;
+	transition: all .1s linear;
 	margin-right: 10px;
 }
 .btn-call4:active {
 	box-shadow: 0 2px 0 #1565c0;
-  transform: translateY(3px);
+	transform: translateY(3px);
 }
 
 .btn-register {
+	text-decoration: none;
 	border: 0;
-  background: #e44524;
-  border-radius: 4px;
-  box-shadow: 0 5px 0 #942e19;
-  color: #fff;
-  cursor: pointer;
-  font-size: 16px;
-  margin: 0;
-  outline: 0;
-  padding: 12px 22px;
-  transition: all .1s linear;
+	background: #e44524;
+	border-radius: 4px;
+	box-shadow: 0 5px 0 #942e19;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	margin: 0;
+	display: inline-block;
+	padding: 12px 22px;
+	transition: all .1s linear;
 }
 .btn-register:active {
 	box-shadow: 0 2px 0 #942e19;
-  transform: translateY(3px);
-}
-.register-page {
-	text-decoration: none;
-	color: #FFF;
-}
-.register-page:hover {
-	text-decoration: none;
-	color: #FFF;
+	transform: translateY(3px);
 }
 
+.btn-register:hover, .btn-register:focus, .btn-call4:hover, .btn-call4:focus{
+	color: #fff;
+}
 /* Responsive */
 
 @media (max-width: 1199px){
