--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -269,7 +269,7 @@ p{
 
 .header .window{
 	margin: 2% auto 0;
-	height: 95%;
+	height: 97%;
 }
 
 .window{
@@ -412,59 +412,57 @@ p{
 
 }
 
+.btn{
+	text-decoration: none;
+	border: 0;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	margin: 0 10px 10px 0;
+	display: inline-block;
+	padding: 12px 22px;
+	-webkit-transition: all .1s linear;
+	-moz-transition: all .1s linear;
+	transition: all .1s linear;
+}
+
 .btn-involved {
 	margin-top: 48px;
 }
 .btn-call4 {
-	text-decoration: none;
-	border: 0;
 	background: #2196f3;
-	border-radius: 4px;
 	box-shadow: 0 5px 0 #1565c0;
-	color: #fff;
-	cursor: pointer;
-	font-size: 16px;
-	margin: 0;
-	display: inline-block;
-	padding: 12px 22px;
-	-webkit-transition: all .1s linear;
-	-moz-transition: all .1s linear;
-	transition: all .1s linear;
-	margin-right: 10px;
-}
-.btn-call4:active {
-	box-shadow: 0 2px 0 #1565c0;
-	transform: translateY(3px);
+	&:hover{
+		background-color: #068bf5;
+	}
+	&:active {
+		box-shadow: 0 2px 0 #1565c0;
+		transform: translateY(3px);
+	}
 }
 
 .btn-register {
-	text-decoration: none;
-	border: 0;
 	background: $orange;
-	border-radius: 4px;
 	box-shadow: 0 5px 0 #942e19;
-	color: #fff;
-	cursor: pointer;
-	font-size: 16px;
-	margin: 0;
-	display: inline-block;
-	padding: 12px 22px;
-	-webkit-transition: all .1s linear;
-	-moz-transition: all .1s linear;
-	transition: all .1s linear;
-}
-.btn-register:active {
-	box-shadow: 0 2px 0 #942e19;
-	transform: translateY(3px);
+	&:hover{
+		background-color: #e83d00;
+	}
+	&:active {
+		box-shadow: 0 2px 0 #942e19;
+		transform: translateY(3px);
+	}
 }
 
-.btn-register:hover, .btn-register:focus, .btn-call4:hover, .btn-call4:focus{
+.btn:hover, .btn:focus{
 	color: #fff;
 }
 
 .section{
 	width: 100%;
-	padding: 40px 0;
+	padding: 20px 0;
 }
 
 .title-section{
@@ -579,11 +577,20 @@ p{
 		display: inline-block;
 		vertical-align: middle;
 		color: #fff;
+		padding: 6px;
 		margin: 0 10px;
+		-webkit-transition: all .1s linear;
+		-moz-transition: all .1s linear;
+		transition: all .1s linear;
+		&:hover{
+			background-color: #fff;
+			color: #000;
+		}
 	}
 }
 
 .copyright{
+	padding: 6px 0;
 	float: left;
 }
 
@@ -619,8 +626,8 @@ p{
 
 .speaker{
 	text-transform: uppercase;
-	max-width: 400px;
-	margin: 30px auto;
+	max-width: 360px;
+	margin: 20px auto;
 	&:hover{
 		.speaker-content{
 			-webkit-transform: translateY(0);
@@ -631,9 +638,9 @@ p{
 		}
 	}
 	&-img{
-		max-width: 360px;
 		width: 100%;
 		height: 360px;
+		display: block;
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
