--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -96,14 +96,16 @@ p{
 .msg{
 	font-family: 'Mono RGO Pro';
 	color: #000;
-	background-color: #ccc;
+	background-color: #fff;
 	display: block;
 	position: absolute;
 	left: 30px;
 	width: 13.4em;
 	bottom: 70px;
+	padding: 4px 0;
 	font-size: 18px;
 	white-space: nowrap;
+	z-index: 2;
 	overflow: hidden;
 	animation: type 1s steps(20, end);
 }
@@ -111,6 +113,7 @@ p{
 .msg2{
 	width: 14.4em;
 	bottom: 48px;
+	z-index: 1;
 	animation: type2 2s steps(20, end);
 }
 
@@ -400,6 +403,7 @@ p{
 	text-align: center;
 	display: block;
 	font-size: 36px;
+	margin-bottom: 40px;
 	&:before, &:after{
 		color: $orange;
 	}
@@ -663,6 +667,9 @@ p{
 			-ms-transform: translateY(0);
 			-o-transform: translateY(0);
 			transform: translateY(0);
+			h2{
+				margin: 0;
+			}
 		}
 		&:before{
 			content: "?";
@@ -703,6 +710,7 @@ p{
 		font-size: 14px;
 	}
 	&-title{
+		padding: 0 6px;
 		line-height: normal;
 		background-color: #fff;
 		color: #000;
@@ -717,12 +725,12 @@ p{
 }
 
 .sponsor-type{
-	font-size: 30px;
+	font-size: 26px;
 	font-weight: bold;
 	margin: 30px 0 10px;
 	display: block;
 	img{
-		max-width: 60px;
+		max-width: 40px;
 	}
 }
 
@@ -737,7 +745,7 @@ p{
 }
 
 .sponsor-content{
-	margin-bottom: 60px;
+	margin: 60px 0;
 	display: block;
 }
 
