--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -786,3 +786,9 @@ p{
 .ruy{
 	background-image: url(../img/ruybarbosa.png);
 }
+.usina{
+	background-image: url(../img/usina-films.png);
+}
+.mw8{
+	background-image: url(../img/universo-mw8.png);
+}
