--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -76,17 +76,17 @@
             }
 
         .timeline > li > .timeline-badge {
-            color: #fff;
-            width: 50px;
-            height: 50px;
+            width: 12px;
+            height: 12px;
+            box-shadow: 0 0 0 7px #008acc, 0 3px 0 4px rgba(0, 0, 0, 0.05);
             line-height: 50px;
             font-size: 1.4em;
             text-align: center;
             position: absolute;
             top: 16px;
             left: 50%;
-            margin-left: -25px;
-            background-color: #999999;
+            margin-left: -6px;
+            background-color: #FFF;
             z-index: 100;
             border-top-right-radius: 50%;
             border-top-left-radius: 50%;
@@ -158,7 +158,7 @@
     }
 
     ul.timeline > li > .timeline-badge {
-        left: 15px;
+        left: 34px;
         margin-left: 0;
         top: 16px;
     }
