--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -5,7 +5,7 @@
 }
 
     .timeline:before {
-        top: 70px;
+        top: 34px;
         bottom: 0;
         position: absolute;
         content: " ";
@@ -51,39 +51,15 @@
             box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
         }
 
-            /*.timeline > li > .timeline-panel:before {
-                position: absolute;
-                top: 26px;
-                right: -15px;
-                display: inline-block;
-                border-top: 15px solid transparent;
-                border-left: 15px solid #ccc;
-                border-right: 0 solid #ccc;
-                border-bottom: 15px solid transparent;
-                content: " ";
-            }
-
-            .timeline > li > .timeline-panel:after {
-                position: absolute;
-                top: 27px;
-                right: -14px;
-                display: inline-block;
-                border-top: 14px solid transparent;
-                border-left: 14px solid #fff;
-                border-right: 0 solid #fff;
-                border-bottom: 14px solid transparent;
-                content: " ";
-            }*/
-
         .timeline > li > .timeline-badge {
             width: 12px;
             height: 12px;
-            box-shadow: 0 0 0 7px #008acc, 0 3px 0 4px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 0 0 7px #4dc9a4, 0 3px 0 4px rgba(0, 0, 0, 0.05); 
             line-height: 50px;
             font-size: 1.4em;
             text-align: center;
             position: absolute;
-            top: 50px;
+            top: 10px;
             left: 50%;
             margin-left: -6px;
             background-color: #FFF;
@@ -112,31 +88,18 @@
                 right: auto;
             }
 
-.timeline-badge.primary {
-    background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-    background-color: #3f903f !important;
-}
-
-.timeline-badge.warning {
-    background-color: #f0ad4e !important;
-}
-
-.timeline-badge.danger {
-    background-color: #d9534f !important;
-}
-
-.timeline-badge.info {
-    background-color: #5bc0de !important;
-}
-
 .timeline-title {
     margin-top: 0;
-    color: #FFF;
+    color: #2196f3;
     font-size: 1.4em;
     font-weight: 800;
+}
+
+.speaker-name {
+    color: #777;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    text-transform: uppercase;
+    font-size: 10px;
 }
 
 .timeline-body > p,
