--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -54,7 +54,7 @@
         .timeline > li > .timeline-badge {
             width: 12px;
             height: 12px;
-            box-shadow: 0 0 0 7px #4dc9a4, 0 3px 0 4px rgba(0, 0, 0, 0.05); 
+            box-shadow: 0 0 0 7px #777, 0 3px 0 4px rgba(0, 0, 0, 0.05); 
             line-height: 50px;
             font-size: 1.4em;
             text-align: center;
@@ -88,18 +88,29 @@
                 right: auto;
             }
 
+.text-hour {
+    font-size: 16px;
+    color: #777;
+}
+
 .timeline-title {
     margin-top: 0;
-    color: #2196f3;
+    color: #FFF;
     font-size: 1.4em;
     font-weight: 800;
 }
 
+.timeline-describe {
+    color: #6f6f6f;
+    line-height: 18px;
+}
+
 .speaker-name {
-    color: #777;
+    color: #2196f3;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     font-size: 10px;
+    font-weight: 800;
 }
 
 .timeline-body > p,
