Inserção palestrante Joselito

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,7 @@
 /* Front In Salvador 2017 */
 
 @import url('bootstrap.min.css');
+@import 'timeline-chart';
 
 @font-face {
 	font-family: 'Mono RGO Pro';
