Ajustes css timeline

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 /* Front In Salvador 2017 */
 
 @import url('bootstrap.min.css');
-@import 'timeline-chart';
+@import url('timeline.css');
 
 @font-face {
 	font-family: 'Mono RGO Pro';
